[package]
name = "pokemon-api-proxy"
version = "0.1.0"
edition = "2024"

[lib]
name = "pokemon_api_proxy"
path = "src/lib.rs"

[[bin]]
name = "pokemon-api-proxy"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.4", features = ["tracing", "macros"] }
rand = "0.9.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
